Handle the case of no mp4 video.

--- a/post_template.html
+++ b/post_template.html
@@ -34,12 +34,7 @@
                 <h1>$title</h1>
                 <p>$blurb</p>
             </div>
-            <div class="row row--video">
-                <video controls>
-          <source src="$moviename" type="video/mp4">
-          I'm sorry; your browser doesn't support MP4 video with H.264.
-        </video>
-            </div>
+            $moviehtml
             <div class="row">
                 <div id="demo-test-gallery" class="demo-gallery">
                     $images
